--- a/src/resources/styles/styles.scss
+++ b/src/resources/styles/styles.scss
@@ -8,14 +8,27 @@
 .game__container {
   margin: auto;
   margin-top: 100px;
-  width: 100%;
   display: flex;
-  justify-content: center;
-}
-
-canvas {
   background-color: antiquewhite;
   width: 720px;
   height: 300px;
   border-bottom: 1px dashed black;
+}
+
+#hero {
+  height: 50px;
+  width: 100px;
+  position: relative;
+  top: 250px;
+  background-image: url('src/resources/character-sprites/mc-run(1).png');
+  background-size: cover;
+  animation: animateHero 0.35s steps(10) infinite;
+}
+
+@keyframes animateHero {
+  20% { background-image: url('src/resources/character-sprites/mc-run(1).png'); }
+  40% { background-image: url('src/resources/character-sprites/mc-run(2).png'); }
+  60% { background-image: url('src/resources/character-sprites/mc-run(2).png'); }
+  80% {background-image: url('src/resources/character-sprites/mc-run(3).png'); }
+  100% {background-image: url('src/resources/character-sprites/mc-run(3).png'); }
 }
