--- a/src/resources/styles/styles.scss
+++ b/src/resources/styles/styles.scss
@@ -8,7 +8,9 @@
 .game__container {
   margin: auto;
   margin-top: 100px;
+  margin-bottom: 50px;
   display: flex;
+  align-items: flex-end;
   background-color: antiquewhite;
   width: 720px;
   height: 300px;
@@ -16,11 +18,14 @@
 }
 
 #hero {
-  height: 50px;
-  width: 100px;
-  position: relative;
-  top: 250px;
+  border: solid rgb(92, 3, 235), 2px;
   background-size: contain;
   background-repeat: no-repeat;
+  position: relative;
+}
 
+.hero__container {
+  border: solid red 1px;
+  height: 50px;
+  width: 200px;
 }
