--- a/src/resources/styles/styles.scss
+++ b/src/resources/styles/styles.scss
@@ -1,3 +1,5 @@
+@use './animations' as *;
+
 * {
   margin: 0;
   padding: 0;
@@ -10,15 +12,17 @@
   margin-top: 100px;
   margin-bottom: 50px;
   display: flex;
-  align-items: flex-end;
-  background-color: antiquewhite;
+  align-items: flex-start;
+  flex-direction: column;
+  background-color: darken(rgb(0, 0, 0), $amount: 0);
   width: 720px;
   height: 300px;
-  border-bottom: 1px dashed black;
+  border-bottom: 2px dashed gray;
 }
 
+
+
 #hero {
-  border: solid rgb(92, 3, 235), 2px;
   background-size: contain;
   background-repeat: no-repeat;
   position: relative;
