--- a/src/resources/styles/styles.scss
+++ b/src/resources/styles/styles.scss
@@ -1,4 +1,5 @@
 @use './animations' as *;
+@use './variables' as *;
 
 * {
   margin: 0;
@@ -17,8 +18,8 @@ body {
   align-items: flex-start;
   flex-direction: column;
   background-color: darken(rgb(0, 0, 0), $amount: 0);
-  width: 720px;
-  height: 300px;
+  width: 100%;
+  height: auto;
   border-bottom: 2px dashed gray;
 }
 
@@ -28,7 +29,7 @@ body {
   width: 100%;
   height: 100%;
   padding-top: 240px;
-  border: 10px solid rgb(253, 115, 138);
+  // border: 1px solid rgb(253, 115, 138);
   background-image: url('/src/resources/environment/office(2).png');
   filter: brightness(140%);
   background-size: 2500px;
@@ -40,4 +41,15 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   position: relative;
+}
+
+.score-counter {
+  border: solid 1px black;
+  font-family: $font-main;
+  border-radius: 5px;
+  padding: 3px 10px;
+  background-color: aliceblue;
+  position: relative;
+  top: -250px;
+  left: 550px;
 }
