start screen styled

--- a/src/resources/styles/_variables.scss
+++ b/src/resources/styles/_variables.scss
@@ -1,3 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=DotGothic16&family=Press+Start+2P&display=swap');
 
-$font-main: 'DotGothic16';
+
+/////// FONTS ///////
+$font-primary: 'Press Start 2P';
+
+
+//////// COLOURS /////
+$color-primary: rgb(240, 248, 255);
