--- a/src/resources/styles/_variables.scss
+++ b/src/resources/styles/_variables.scss
@@ -7,4 +7,9 @@ $font-secondary: 'DotGothic16';
 
 
 //////// COLOURS /////
-$color-primary: rgb(240, 248, 255);
+$color-primary: #f0f8ff;
+$color-secondary: #f5f5dc;
+$color-button-hover: #ff4d00;
+$color-button-active: #08c501;
+$color-gradient-one: #ff4d00;
+$color-gradient-two: #ffbf00;
