--- a/src/resources/styles/styles.scss
+++ b/src/resources/styles/styles.scss
@@ -1,6 +1,7 @@
 @use './animations' as *;
 @use './variables' as *;
 @use './game-screens' as *;
+@use './components' as *;
 
 * {
   margin: 0;
@@ -9,7 +10,7 @@
 }
 
 body {
-  background-color: rgba(0, 0, 0, 0.636);
+  background-color: rgb(0, 0, 0);
 }
 .game__container {
   margin: auto;
@@ -18,7 +19,7 @@ body {
   display: flex;
   align-items: flex-start;
   flex-direction: column;
-  background-color: darken(rgb(0, 0, 0), $amount: 0);
+  background-color: black;
   width: 100%;
   border-bottom: 2px dashed gray;
 }
