game over screen and play again functionality completed

--- a/src/resources/styles/_components.scss
+++ b/src/resources/styles/_components.scss
@@ -46,3 +46,27 @@
       color: $color-button-active;
     }
 }
+
+.game__end-screen-button {
+  margin: 10px 10px 25px;
+  padding: 8px 10px;
+  font-family: $font-primary;
+  font-size: 10px;
+  letter-spacing: 2px;
+  font-weight: 500;
+  border-radius: 12px;
+  color: $color-primary;
+
+    &:hover {
+      color: $color-button-hover;
+      box-shadow: 5px 5px 2px;
+      background-color: $color-primary;
+      cursor: pointer;
+    }
+
+    &:active {
+      box-shadow: 2px 2px 2px;
+      font-size: 8px;
+      color: $color-button-active;
+    }
+}
