deploy check - hanges to url file paths

--- a/src/resources/styles/styles.scss
+++ b/src/resources/styles/styles.scss
@@ -33,7 +33,7 @@ body {
   // height: 100%;
   padding-top: 240px;
   // border: 1px solid rgb(253, 115, 138);
-  background-image: url('/src/resources/environment/office(2).png');
+  background-image: url('./src/resources/environment/office(2).png');
   filter: brightness(140%);
   background-size: 2500px;
   background-repeat: repeat;
