moving images to public folder

--- a/src/resources/styles/_game-screens.scss
+++ b/src/resources/styles/_game-screens.scss
@@ -51,7 +51,7 @@
   width: 263px;
   height: 200px;
   color: black;
-  background-image: url('../images/game-screen.jpeg');
+  background-image: url('/game-screen.jpeg');
   background-repeat: no-repeat;
   border-radius: 25px;
   box-shadow: 5px 5px 2px;
