--- a/src/resources/styles/styles.scss
+++ b/src/resources/styles/styles.scss
@@ -31,11 +31,10 @@ body {
   align-items: flex-end;
   width: 100%;
   padding-top: 240px;
-  background-image: url('src/resources/environment/office(2).png');
+  background-image: url('/office(2).png');
   filter: brightness(140%);
   background-size: 2500px;
   background-repeat: repeat;
-  // animation: sceneMovement 8s linear infinite;
 }
 
 #hero {
