editing picture files to fix deploy issue

--- a/src/resources/styles/styles.scss
+++ b/src/resources/styles/styles.scss
@@ -31,7 +31,7 @@ body {
   align-items: flex-end;
   width: 100%;
   padding-top: 240px;
-  background-image: url('/office(2).png');
+  background-image: url('./office(2).png'); 
   filter: brightness(140%);
   background-size: 2500px;
   background-repeat: repeat;
